--- a/index.html
+++ b/index.html
@@ -5,169 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScriptで簡単なタイピングゲームを作ってみよう</title>
     <style>
-    /*
-    html5doctor.com Reset Stylesheet
-    v1.6.1
-    Last Updated: 2010-09-17
-    Author: Richard Clark - http://richclarkdesign.com
-    Twitter: @rich_clark
-    */
-    html {
-        touch-action: manipulation;
-    }
-    html, body, div, span, object, iframe,
-    h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-    abbr, address, cite, code,
-    del, dfn, em, img, ins, kbd, q, samp,
-    small, strong, sub, sup, var,
-    b, i,
-    dl, dt, dd, ol, ul, li,
-    fieldset, form, label, legend,
-    table, caption, tbody, tfoot, thead, tr, th, td,
-    article, aside, canvas, details, figcaption, figure,
-    footer, header, hgroup, menu, nav, section, summary,
-    time, mark, audio, video {
-        margin:0;
-        padding:0;
-        border:0;
-        outline:0;
-        font-size:100%;
-        vertical-align:baseline;
-        background:transparent;
-    }
-    body {
-        line-height:1;
-    }
-    article,aside,details,figcaption,figure,
-    footer,header,hgroup,menu,nav,section {
-        display:block;
-    }
-    ul {
-        list-style:none;
-    }
-    blockquote, q {
-        quotes:none;
-    }
-    blockquote:before, blockquote:after,
-    q:before, q:after {
-        content:'';
-        content:none;
-    }
-    a {
-        margin:0;
-        padding:0;
-        font-size:100%;
-        vertical-align:baseline;
-        background:transparent;
-    }
-    /* change colours to suit your needs */
-    ins {
-        background-color:#ff9;
-        color:#000;
-        text-decoration:none;
-    }
-    /* change colours to suit your needs */
-    mark {
-        background-color:#ff9;
-        color:#000;
-        font-style:italic;
-        font-weight:bold;
-    }
-    del {
-        text-decoration: line-through;
-    }
-    abbr[title], dfn[title] {
-        border-bottom:1px dotted;
-        cursor:help;
-    }
-    table {
-        border-collapse:collapse;
-        border-spacing:0;
-    }
-    /* change border colour to suit your needs */
-    hr {
-        display:block;
-        height:1px;
-        border:0;  
-        border-top:1px solid #cccccc;
-        margin:1em 0;
-        padding:0;
-    }
-    input, select {
-        vertical-align:middle;
-    }
-    /* Reset CSS ここまで */
-
-    body {
-        font-family: "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Arial", "Yu Gothic", "Meiryo", sans-serif;
-        background-color: lightgray; /* Change background color to light gray */}
-    .gtitle {
-        display: block;
-        margin-top: 8rem;
-        font-size: 3rem;
-        text-align: center;
-        padding-top: 20px;
-        color: blue; /* Change color to blue */
-    font-weight: bold; /* Make text bold */ /* Added padding to push the text lower */
-    }
-    .text-container {
-        width: 100vw;
-        height: 100vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    .text-container label {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    .question {
-        display: flex;
-        flex-direction: column;
-        font-size: 4vw;
-        font-weight: bold;
-        letter-spacing: 0.25em;
-        text-align: center;
-    }
-    .marker {
-        background: #91dbf1;
-    }
-    .text {
-        width: 100%;
-        border: 2px solid #5C7AEA; /* New border style */;
-        margin-top: 2rem;
-        font-size: 3vw;
-        letter-spacing: 0.1em;
-        text-align: center;
-        padding: 12px 20px; /* New padding */
-        background-color: #E8E8E8; /* New background color */
-        color: #333; /* New text color */
-        border-radius: 8px; /* Rounded borders */
-    }
-    .text:focus, .text:focus-visible {
-        border: 2px solid #4285F4;
-        outline: none;
-    }
-    .message {
-        display: block;
-        margin-top: 2rem;
-        font-size: 1.5rem;
-        text-align: center;
-    }
-    .button {
-        margin-top: 1rem;
-        font-size: 1rem;
-        cursor: pointer;
-    }
-    .hidden {
-        display: none;
-    }
-    </style>
+        /* ... existing code ... */
+        body {
+            font-family: "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Arial", "Yu Gothic", "Meiryo", sans-serif;
+            background-color: lightgray;
+            font-size: 2vw; /* Responsive font size */
+        }
+        .gtitle {
+            display: block;
+            margin-top: 8rem;
+            font-size: 6vw; /* Responsive font size */
+            text-align: center;
+            padding-top: 20px;
+            color: blue;
+            font-weight: bold;
+        }
+        .question {
+            display: flex;
+            flex-direction: column;
+            font-size: 4vw; /* Responsive font size */
+            font-weight: bold;
+            letter-spacing: 0.25em;
+            text-align: center;
+        }
+        .text {
+            width: 100%;
+            border: 2px solid #5C7AEA;
+            margin-top: 2rem;
+            font-size: 3vw; /* Responsive font size */
+            letter-spacing: 0.1em;
+            text-align: center;
+            padding: 12px 20px;
+            background-color: #E8E8E8;
+            color: #333;
+            border-radius: 8px;
+        }
+        .message {
+            display: block;
+            margin-top: 2rem;
+            font-size: 3vw; /* Responsive font size */
+            text-align: center;
+        }
+        .button {
+            margin-top: 1rem;
+            font-size: 2vw; /* Responsive font size */
+            cursor: pointer;
+        }
+        /* ... existing code ... */
+        </style>
 </head>
 <body>
     <div class="gtitle">
