--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 
     <div id="message" class="text-container hidden">
         <div class="message">
-            ゲームクリア！お疲れ様でした！<br>
-            <button id="replayBtn" class="button">もう一度プレイする</button>
+           <br>
+            <button id="replayBtn" class="button">Reset</button>
         </div>
     </div>
 
