--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScriptで簡単なタイピングゲームを作ってみよう</title>
+    <title>Japanese Typing Game </title>
     <style>
         /* ... existing code ... */
         body {
